# geoml-toolkits

./: .gitignore  CHANGELOG.md  README.md  example_usage.ipynb  justfile  pyproject.toml  run.sh
.github/workflows/: publish.yml  test.yml
src/geomltoolkits/: __init__.py  _logging.py  cli.py  utils.py
src/geomltoolkits/downloader/: __init__.py  oam.py  osm.py  tms.py
src/geomltoolkits/geometry/: crs.py  merge_polygons.py  orthogonalize.py  tiles.py  validate.py
src/geomltoolkits/raster/: burn.py  georeference.py  merge.py  morphology.py  patch.py  vectorize.py
src/geomltoolkits/regularizer/: app.py  orthogonalize.py  potrace2geojson.py  svg2geojson.py
src/geomltoolkits/training/: prepare.py
tests/: test_app.py  test_polygon_validation.py
tests/data/: sample_predictions.tif
